--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Archivo Narrow', sans-serif;
+  font-family: 'IM Fell English', serif;
   background-color: #222;
   color: white;
   text-align: center;
@@ -49,14 +49,13 @@ body {
   border: none;
   color: white;
   letter-spacing: -0.05rem;
-  text-shadow: -1.5px -1.5px 0 black, 1.5px -1.5px 0 black, -1.5px 1.5px 0 black, 1.5px 1.5px 0 black;
+  text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
   text-align: left;
   text-decoration: none;
   cursor: pointer;
   border-radius: 5px;
-  font-family: 'Archivo Narrow', sans-serif;
+  font-family: 'IM Fell English', serif;
   width: 100%;
-
 }
 
 #options button:hover {
@@ -97,4 +96,28 @@ button:disabled {
     font-size: 1.3rem;
     padding: 0.6rem 1rem;
   }
+}
+
+.spinner {
+  font-family: 'IM Fell English', serif;
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 500;
+  background-image: linear-gradient(135deg, #553e1c, #d4b99d);
+  -webkit-background-clip: text;
+  color: transparent;
+  padding: 20px;
+  animation: fadeIn 2s ease-in-out infinite alternate;
+}
+
+/* Estilo para el texto de Star Wars */
+#star-wars-text {
+  font-family: 'Arial', sans-serif;
+  font-size: 3em;
+  text-align: center;
+  color: #FFE81F;
+  text-shadow: 0 0 5px rgba(255, 232, 31, 0.5);
+  position: relative;
+  perspective: 1000px;
+  transform-origin: 50% 100%;
 }
