music and volume control added

--- a/src/game/Game.css
+++ b/src/game/Game.css
@@ -121,3 +121,8 @@ button:disabled {
   perspective: 1000px;
   transform-origin: 50% 100%;
 }
+
+.tools-buttons-container {
+  display: flex;
+  justify-content: space-between;
+}
